feat: Implementar función de cambio de contraseña y mejorar integración Stripe
- ✅ Agregar modal de cambio de contraseña con validaciones completas
- ✅ Conectar función de cambio de contraseña con Airtable
- ✅ Mejorar diseño del modal de verificación de identidad
- ✅ Optimizar integración de Stripe con datos reales de Airtable
- ✅ Corregir mapeo de stripe_customer_id en airtableService
- ✅ Mejorar manejo de errores y notificaciones
- ✅ Limpiar interfaz de configuración de API
- ✅ Agregar documentación y archivos de configuración
- ✅ Implementar scroll funcional en modal de notificaciones

--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,12 @@ temp/
 .tern-port
 
 # Airtable config files (sensitive data)
+
+# Stripe config files (sensitive data)
+src/config/stripe.config.js
+stripe.config.js
+
+# Backend files (optional - remove if you want to version control them)
+backend-example.js
+package-backend.json
 src/config/airtable.init.js
