fix: Solucionar problemas de despliegue en Vercel
- ✅ Configurar vercel.json para servir archivos estáticos
- ✅ Reorganizar orden de carga de scripts en index.html
- ✅ Simplificar package.json para proyecto estático
- ✅ Agregar archivo _redirects para manejo de rutas SPA
- ✅ Configurar headers correctos para archivos JavaScript
- ✅ Corregir estructura de archivos para despliegue en Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,34 @@
 {
   "version": 2,
   "name": "konsul-chatbot",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "framework": "vite",
+  "buildCommand": null,
+  "outputDirectory": ".",
+  "installCommand": null,
+  "framework": null,
   "routes": [
     {
       "src": "/(.*)",
       "dest": "/$1"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/src/(.*)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.js)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
     }
   ]
 }
