feat(team): integrar Airtable para equipo real, eliminar mocks y campos del modal; fix(auth): persistencia de sesión en modo mock; ui: modal de invitación simplificado y espera para TeamManager; chore: sincronizar cambios y limpieza

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
   "framework": null,
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "https://api.gptmaker.ai/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/$1"
     }
