--- a/.gitignore
+++ b/.gitignore
@@ -94,7 +94,10 @@ temp/
 src/config/stripe.config.js
 stripe.config.js
 
+# Development config files (sensitive data)
+src/config/dev.config.js
+src/config/airtable.init.js
+
 # Backend files (optional - remove if you want to version control them)
 backend-example.js
 package-backend.json
-src/config/airtable.init.js
