--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "name": "konsul-chatbot",
-  "buildCommand": null,
-  "outputDirectory": ".",
-  "installCommand": null,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "framework": null,
   "routes": [
     {
