--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   ],
   "author": "Tu Empresa",
   "license": "MIT",
+  "dependencies": {
+    "stripe": "^14.21.0"
+  },
   "devDependencies": {
     "http-server": "^14.1.1",
     "vite": "^7.1.12"
