--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
   "framework": null,
   "rewrites": [
     {
+      "source": "/api/stripe/:path*",
+      "destination": "/api/stripe/:path*"
+    },
+    {
       "source": "/api/:path*",
       "destination": "https://api.gptmaker.ai/:path*"
     }
