fix: Mejorar manejo de parámetros dinámicos en funciones serverless de Stripe
- Agregado manejo flexible de parámetros dinámicos (req.query y URL)
- Agregado logging detallado en funciones serverless para debugging
- Configurado runtime de Node.js 18.x para funciones serverless
- Mejorado manejo de errores con información de debug

--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,11 @@
       "destination": "https://api.gptmaker.ai/:path*"
     }
   ],
+  "functions": {
+    "api/stripe/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "headers": [
     {
       "source": "/src/(.*)",
