chore: agregar script para verificar customers en stripe

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Tu Empresa",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "stripe": "^14.21.0"
   },
   "devDependencies": {
