feat: agregar integración con Neon PostgreSQL para prospectos
- Crear NeonService para reemplazar Airtable en prospectos
- Agregar API endpoint /api/neon para queries seguras
- Script de migración de Airtable a Neon
- Modo híbrido: Neon para prospectos, Airtable para usuarios
- Documentación completa en NEON_SETUP.md y PLAN_MIGRACION_NEON.md
- Resolver problemas de rate limiting (429) con Airtable
- Agregar dependencias @neondatabase/serverless y pg

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
       "destination": "/api/stripe/:path*"
     },
     {
+      "source": "/api/neon/:path*",
+      "destination": "/api/neon.js"
+    },
+    {
       "source": "/api/:path*",
       "destination": "https://api.gptmaker.ai/:path*"
     }
