--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "author": "Tu Empresa",
   "license": "MIT",
   "dependencies": {
+    "@neondatabase/serverless": "^0.9.0",
     "dotenv": "^16.4.5",
+    "pg": "^8.11.3",
     "stripe": "^14.21.0"
   },
   "devDependencies": {
