--- a/config.example.env
+++ b/config.example.env
@@ -7,9 +7,12 @@ GPTMAKER_API_TOKEN=tu_token_aqui
 # URL base de GPTMaker API
 GPTMAKER_BASE_URL=https://api.gptmaker.com
 
-# Configuración de Airtable
+# Configuración de Airtable (DEPRECADO - Migrando a Neon)
 AIRTABLE_API_KEY=tu_api_key_aqui
 AIRTABLE_BASE_ID=tu_base_id_aqui
+
+# Configuración de Neon Database
+NEON_DATABASE_URL=postgresql://user:password@host/database?sslmode=require
 
 # Configuración de Stripe
 STRIPE_PUBLISHABLE_KEY=pk_test_...
